[gd_scene load_steps=11 format=3 uid="uid://v8kykgvjf7a7"]

[ext_resource type="Script" path="res://SkyEditor.gd" id="1_er30l"]
[ext_resource type="PackedScene" uid="uid://dq5pqe2t36jib" path="res://SkyPreview.tscn" id="1_jh2pw"]
[ext_resource type="PackedScene" uid="uid://84dm6eq60ka2" path="res://SkyEditorTextureSetting.tscn" id="3_72m24"]
[ext_resource type="PackedScene" uid="uid://dhi8xqc5pu4uj" path="res://SkyEditorBoolSetting.tscn" id="3_p0act"]
[ext_resource type="PackedScene" uid="uid://pjsk5llxms0j" path="res://SkyEditorFloatSetting.tscn" id="3_s05pv"]
[ext_resource type="PackedScene" uid="uid://ctflfj6mconmy" path="res://SkyEditorLayersSetting.tscn" id="4_18wve"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_k33ic"]
bg_color = Color(0, 0, 0, 0.501961)

[sub_resource type="FontVariation" id="FontVariation_4djvd"]
variation_embolden = 0.5

[sub_resource type="LabelSettings" id="LabelSettings_ik1ui"]
font = SubResource("FontVariation_4djvd")

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_mfasv"]
blend_mode = 3

[node name="SkyEditor" type="HBoxContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_er30l")

[node name="Sky Preview" parent="." instance=ExtResource("1_jh2pw")]
unique_name_in_owner = true
auto_translate_mode = 1
layout_mode = 2

[node name="CollapserButton" type="Button" parent="."]
layout_mode = 2
focus_mode = 0
theme_override_font_sizes/font_size = 10
text = "â–¶"

[node name="SettingsContainer" type="PanelContainer" parent="."]
layout_mode = 2

[node name="ScrollContainer" type="ScrollContainer" parent="SettingsContainer"]
layout_mode = 2
horizontal_scroll_mode = 0

[node name="VBoxContainer" type="VBoxContainer" parent="SettingsContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="BackgroundHeader" type="PanelContainer" parent="SettingsContainer/ScrollContainer/VBoxContainer"]
auto_translate_mode = 1
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_k33ic")

[node name="MarginContainer" type="MarginContainer" parent="SettingsContainer/ScrollContainer/VBoxContainer/BackgroundHeader"]
auto_translate_mode = 1
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="Label" type="Label" parent="SettingsContainer/ScrollContainer/VBoxContainer/BackgroundHeader/MarginContainer"]
auto_translate_mode = 1
layout_mode = 2
text = "General"
label_settings = SubResource("LabelSettings_ik1ui")

[node name="BackgroundTexture" parent="SettingsContainer/ScrollContainer/VBoxContainer" instance=ExtResource("3_72m24")]
layout_mode = 2
setting_name = "background"

[node name="StarsTexture" parent="SettingsContainer/ScrollContainer/VBoxContainer" instance=ExtResource("3_72m24")]
layout_mode = 2
setting_name = "stars"

[node name="CloudTintTexture" parent="SettingsContainer/ScrollContainer/VBoxContainer" instance=ExtResource("3_72m24")]
layout_mode = 2
setting_name = "cloud_tint"

[node name="LayersHeading" type="PanelContainer" parent="SettingsContainer/ScrollContainer/VBoxContainer"]
auto_translate_mode = 1
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_k33ic")

[node name="MarginContainer" type="MarginContainer" parent="SettingsContainer/ScrollContainer/VBoxContainer/LayersHeading"]
auto_translate_mode = 1
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="Label" type="Label" parent="SettingsContainer/ScrollContainer/VBoxContainer/LayersHeading/MarginContainer"]
auto_translate_mode = 1
layout_mode = 2
text = "Layers"
label_settings = SubResource("LabelSettings_ik1ui")

[node name="LayersSetting" parent="SettingsContainer/ScrollContainer/VBoxContainer" instance=ExtResource("4_18wve")]
layout_mode = 2

[node name="CloudsHeader" type="PanelContainer" parent="SettingsContainer/ScrollContainer/VBoxContainer"]
auto_translate_mode = 1
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_k33ic")

[node name="MarginContainer" type="MarginContainer" parent="SettingsContainer/ScrollContainer/VBoxContainer/CloudsHeader"]
auto_translate_mode = 1
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="Label" type="Label" parent="SettingsContainer/ScrollContainer/VBoxContainer/CloudsHeader/MarginContainer"]
auto_translate_mode = 1
layout_mode = 2
text = "Clouds"
label_settings = SubResource("LabelSettings_ik1ui")

[node name="DensityFloat" parent="SettingsContainer/ScrollContainer/VBoxContainer" instance=ExtResource("3_s05pv")]
layout_mode = 2
setting_name = "density"

[node name="CloudsParallaxFloat" parent="SettingsContainer/ScrollContainer/VBoxContainer" instance=ExtResource("3_s05pv")]
layout_mode = 2
setting_name = "clouds_parallax"

[node name="WindHeader" type="PanelContainer" parent="SettingsContainer/ScrollContainer/VBoxContainer"]
auto_translate_mode = 1
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_k33ic")

[node name="MarginContainer" type="MarginContainer" parent="SettingsContainer/ScrollContainer/VBoxContainer/WindHeader"]
auto_translate_mode = 1
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="Label" type="Label" parent="SettingsContainer/ScrollContainer/VBoxContainer/WindHeader/MarginContainer"]
auto_translate_mode = 1
layout_mode = 2
text = "Wind"
label_settings = SubResource("LabelSettings_ik1ui")

[node name="WindSpeedFloat" parent="SettingsContainer/ScrollContainer/VBoxContainer" instance=ExtResource("3_s05pv")]
layout_mode = 2
setting_name = "wind_speed"

[node name="WindParallaxFloat" parent="SettingsContainer/ScrollContainer/VBoxContainer" instance=ExtResource("3_s05pv")]
layout_mode = 2
setting_name = "wind_parallax"

[node name="WindDistanceFloat" parent="SettingsContainer/ScrollContainer/VBoxContainer" instance=ExtResource("3_s05pv")]
layout_mode = 2
setting_name = "wind_distance"

[node name="ParallaxHeader" type="PanelContainer" parent="SettingsContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_k33ic")

[node name="MarginContainer" type="MarginContainer" parent="SettingsContainer/ScrollContainer/VBoxContainer/ParallaxHeader"]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="Label" type="Label" parent="SettingsContainer/ScrollContainer/VBoxContainer/ParallaxHeader/MarginContainer"]
layout_mode = 2
text = "Parallax"
label_settings = SubResource("LabelSettings_ik1ui")

[node name="VertTilingBool" parent="SettingsContainer/ScrollContainer/VBoxContainer" instance=ExtResource("3_p0act")]
layout_mode = 2
tooltip_text = "Whether sky layers should tile vertically, or stretch at the top and bottom. Also shifts vertical parallax by 0.5 units downwards if not enabled."
setting_name = "vertical_tiling"

[node name="HorzScrollingBool" parent="SettingsContainer/ScrollContainer/VBoxContainer" instance=ExtResource("3_p0act")]
layout_mode = 2
setting_name = "horizontal_scrolling"

[node name="LayerBaseHeightFloat" parent="SettingsContainer/ScrollContainer/VBoxContainer" instance=ExtResource("3_s05pv")]
layout_mode = 2
setting_name = "layer_base_height"

[node name="ILVertDistanceFloat" parent="SettingsContainer/ScrollContainer/VBoxContainer" instance=ExtResource("3_s05pv")]
layout_mode = 2
setting_name = "interlayer_vertical_distance"

[node name="ILHorzDistanceFloat" parent="SettingsContainer/ScrollContainer/VBoxContainer" instance=ExtResource("3_s05pv")]
layout_mode = 2
setting_name = "interlayer_horizontal_distance"

[node name="HorzDistanceFloat" parent="SettingsContainer/ScrollContainer/VBoxContainer" instance=ExtResource("3_s05pv")]
layout_mode = 2
setting_name = "horizontal_distance"

[node name="VertDistanceFloat" parent="SettingsContainer/ScrollContainer/VBoxContainer" instance=ExtResource("3_s05pv")]
layout_mode = 2
setting_name = "vertical_distance"

[node name="LayerBaseSpacingFloat" parent="SettingsContainer/ScrollContainer/VBoxContainer" instance=ExtResource("3_s05pv")]
layout_mode = 2
setting_name = "layer_base_spacing"

[node name="ShadowsHeader" type="PanelContainer" parent="SettingsContainer/ScrollContainer/VBoxContainer"]
auto_translate_mode = 1
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_k33ic")

[node name="MarginContainer" type="MarginContainer" parent="SettingsContainer/ScrollContainer/VBoxContainer/ShadowsHeader"]
auto_translate_mode = 1
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="Label" type="Label" parent="SettingsContainer/ScrollContainer/VBoxContainer/ShadowsHeader/MarginContainer"]
auto_translate_mode = 1
layout_mode = 2
text = "Shadows"
label_settings = SubResource("LabelSettings_ik1ui")

[node name="ShadowsTexture" parent="SettingsContainer/ScrollContainer/VBoxContainer" instance=ExtResource("3_72m24")]
layout_mode = 2
setting_name = "shadows"

[node name="ShadowOpacityFloat" parent="SettingsContainer/ScrollContainer/VBoxContainer" instance=ExtResource("3_s05pv")]
layout_mode = 2
setting_name = "shadow_opacity"

[node name="FoliageShadowsBool" parent="SettingsContainer/ScrollContainer/VBoxContainer" instance=ExtResource("3_p0act")]
layout_mode = 2
setting_name = "foliage_shadows"

[node name="NoPerFaceLayerXOffsetHeader" type="PanelContainer" parent="SettingsContainer/ScrollContainer/VBoxContainer"]
auto_translate_mode = 1
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_k33ic")

[node name="MarginContainer" type="MarginContainer" parent="SettingsContainer/ScrollContainer/VBoxContainer/NoPerFaceLayerXOffsetHeader"]
auto_translate_mode = 1
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="Label" type="Label" parent="SettingsContainer/ScrollContainer/VBoxContainer/NoPerFaceLayerXOffsetHeader/MarginContainer"]
auto_translate_mode = 1
layout_mode = 2
text = "NoPerFaceLayerXOffset"
label_settings = SubResource("LabelSettings_ik1ui")

[node name="NoPerFaceLayerXOffsetBool" parent="SettingsContainer/ScrollContainer/VBoxContainer" instance=ExtResource("3_p0act")]
layout_mode = 2
tooltip_text = "NoPerFaceLayerXOffset"
setting_name = "no_per_face_layer_x_offset"

[node name="LayerBaseXOffsetFloat" parent="SettingsContainer/ScrollContainer/VBoxContainer" instance=ExtResource("3_s05pv")]
layout_mode = 2
setting_name = "layer_base_x_offset"

[node name="UnloadedSkyCover" type="PanelContainer" parent="SettingsContainer"]
unique_name_in_owner = true
visible = false
material = SubResource("CanvasItemMaterial_mfasv")
layout_mode = 2

[node name="CenterContainer" type="CenterContainer" parent="SettingsContainer/UnloadedSkyCover"]
layout_mode = 2

[node name="Label" type="Label" parent="SettingsContainer/UnloadedSkyCover/CenterContainer"]
layout_mode = 2
text = "Load a sky to edit its properties."

[connection signal="pressed" from="CollapserButton" to="." method="_on_collapser_button_pressed"]
